updated the companion request service class